# ocr_benchmark_framework

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
scripts/: prepare_datasets.py  run_benchmark.py  run_doctr.py  run_easyocr.py  run_google.py  run_ocrspace.py  run_paddleocr.py  run_tesseract.py  verify_paddle_gpu.py
src/ocr_benchmark_2025/: __init__.py  config.py  datasets.py  metrics.py
tests/: __init__.py  test_metrics.py  test_pdf_support.py
