[project]
name = "ocr-benchmark-2025"
version = "0.1.0"
description = "OCR benchmark toolkit comparing PaddleOCR, EasyOCR, and OCR.space on SROIE and FUNSD datasets"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Björn Büdenbender", email = "agentic.ai.forge@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "requests>=2.31",
    "pymupdf>=1.24",  # PDF support
    "pydantic-settings>=2.0",
    "numpy<2.0.0",    # Pin for compatibility with easyocr/torchvision
]

[project.optional-dependencies]
paddleocr = [
    "paddleocr>=3.0",
    "paddlepaddle-gpu==3.2.0; sys_platform == 'linux' or sys_platform == 'win32'",  # GPU Version (Pinned for 3.3.0 PIR stability)
]
tesseract = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

doctr = [
    "python-doctr[torch]>=0.7.0,<0.8.0",
    "huggingface-hub<1.0",
]
google-cloud = [
    "google-cloud-vision>=3.4",
]
datasets = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "datasets>=2.15",  # Hugging Face datasets library
]
easyocr = [
    "easyocr>=1.7",
]
llm-judge = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
]
all = [
    "ocr-benchmark-2025[paddleocr,easyocr,llm-judge,dev,tesseract,doctr]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddlepaddle" }

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_benchmark_2025"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
]

[tool.ruff.lint.pylint]
max-args = 8
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "PLR2004", "ERA001", "PLC0415", "SIM117"]  # Tests use inline imports for isolation
"scripts/**" = ["PLR2004", "PLR0912", "PLR0915", "SIM102", "PLC0415", "SIM105", "W293"]  # Script complexity
"scripts/llm_judge.py" = ["E501"]  # Long lines in LLM prompts are acceptable

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
